# claude-gpt

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: AI_ARCHITECT.md  ARCHITECTURE.md  ASSET_LICENSES.md  BACKLOG.md  CHANGELOG.md  CURRENT_STATE.md  DATA_MODEL.md  DECISIONS.md  DESIGN_SYSTEM.md  GAME_SYSTEMS.md  MASTER_SPEC.md  ROADMAP.md  SECURITY_AND_PRIVACY.md  TESTING.md  USER_PROFILE_SCHEMA.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/app/: App.tsx  ComingSoon.tsx  DesktopRequired.tsx  ErrorBoundary.tsx  NavIcon.tsx  Shell.tsx  Sidebar.tsx  SystemContext.tsx  TopBar.tsx  app.css  comingsoon.css  shell.css  sidebar.css  topbar.css  useFocusTrap.ts
src/audio/: engine.ts
src/core/: content-locale.ts  version.ts
src/core/achievements/: definitions.test.ts  definitions.ts  engine.ts
src/core/app/: repositories.ts  system-service.ts
src/core/domain/: types.ts
src/core/persistence/: migrator.test.ts  migrator.ts  types.ts
src/core/platform/: clock.ts  index.ts  storage.ts
src/core/progression/: levels.test.ts  levels.ts  xp.test.ts  xp.ts
src/core/quests/: generator.test.ts  generator.ts  objectives.test.ts  objectives.ts  rationale-i18n.ts  (+4 more)
src/i18n/: en.ts  index.test.ts  index.ts  pt-BR.ts
src/styles/: global.css  tokens.css
src/ui/: AchievementGlyph.tsx  AchievementToast.tsx  LevelBar.tsx  QuestCard.tsx  ui.css
tests/: vertical-slice.test.ts
(+43 files in other folders)
